2003-08-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-node.h, cong-util.c, cong-util.h, tree.c, xmldata.c

	Initial cursor placement, and placement of cursor when tags are added; some warnings fixed

	* cong-editor-widget3.c, cong-file-export.c, cong-file-open.c, cong-file-save.c, cong-tree-view.c

	Fixed some warnings
	
2003-08-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c, cong-editor-area-bin.c, cong-editor-area.c, cong-editor-child-policy.c, cong-editor-widget3.c, cong-file-new.c, plugin-lists-node-element-listitem.c, popup.c, xmldata.c 

	Fixed some warnings
	
	* cong-document.c, cong-document.h, cong-editor-widget3.c

	Support for deleting the selection
	
	* cong-text-cache.c

	Fixed a missing return value and added lots of assertions

	* cong-text-cache.c

	Fixed an assertion failure when moving the cursor through a region of stripped whitespace
	
2003-08-26  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-widget.h, cong-editor-widget3.c

	Support for cursor up and down movement in the new editor widget.

2003-08-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-primary-window.c

	Turned new editor widget on by default

	* cong-editor-widget3.c

	Initial implementation of keypress handling for new widget

	* cong-util.c, cong-util.h, plugin-docbook.c
	
	Moved Docbook detection from plugin-docbook.c into cong-util.c

	* cong-document.c, cong-node.h, plugin-lists-node-element-listitem.c, plugin-website.c, xmldata.c

	Added namespace support to cong_node_is_tag, plus some other utility functions on nodes

2003-08-13  David Malcolm <david@davemalcolm.demon.co.uk>
